Prevent colloboration label from wrapping to three lines

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -276,6 +276,7 @@ a[href*="license"] {
     &#collab {
       @include for-desktop-up {
         align-self: flex-start;
+        min-width: 8em; /* don't let it get small enough to wrap onto three lines */
       }
     }
   }
